<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    android:orientation="vertical"
    android:weightSum="3"
    tools:context=".ui.fragment.AboutUsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <include layout="@layout/layout_toolbar_fragment" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/ic_about"
            android:contentDescription="@string/about_vector" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/khandevane"
            android:gravity="center_horizontal"
            android:text="@string/contact_me"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="3"
        android:orientation="vertical">

        <com.makeramen.roundedimageview.RoundedImageView
            android:layout_width="85dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/profile_image"
            app:riv_corner_radius="50dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".5"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/khandevane"
            android:gravity="center_horizontal"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".5"
            android:fontFamily="@font/vazir"
            android:gravity="center"
            android:text="محمد مهدی کاردان (Mohamad Mahdi Kardan)"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".5"
            android:fontFamily="@font/khandevane"
            android:gravity="center"
            android:textColor="@color/black"
            android:text="@string/email"
            android:layout_marginTop="8dp"
            android:textSize="20sp"
            android:textStyle="bold" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".5"
            android:fontFamily="@font/vazir"
            android:gravity="center_horizontal"
            android:text="@string/my_email"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="2"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".5"
            android:fontFamily="@font/khandevane"
            android:gravity="center"
            android:textColor="@color/black"
            android:text="@string/my_btc_wallet"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".5"
            android:fontFamily="@font/vazir"
            android:gravity="center_horizontal"
            android:text="@string/my_wallet"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>